<resources>
    <string name="app_name">TravelGuide</string>
    <string name="company_number">+91 98 76 54321</string>
    <string name="company_address">Uttarakhand, Nainital</string>
    <string name="timing">07:00am -10:00pm</string>
    <string name="company_email">himanisharma2304@gmail.com</string>
    <string name="wallpaper_of_copmpany">Wallpaper Of Copmpany</string>
    <string name="company_logo_description">Travel Logo</string>
</resources>
